--- a/styles/blocks/_why-cyprus.scss
+++ b/styles/blocks/_why-cyprus.scss
@@ -39,13 +39,18 @@
 
 .why-cyprus__grid {
   font-family: var(--font-family-base);
-  padding: 0 45px 60px 45px;
+  padding: 12px;
   display: grid;
   grid-column-gap: 20px;
   grid-row-gap: 40px;
   grid-template-columns: minmax(140px, 280px) minmax(140px, 280px);
   grid-template-rows: 1fr 1fr;
   justify-content: center;
+
+
+   @include mobile-min-width {
+    padding: 0 45px 60px 45px;
+  }
 
     @include tablet-min-width {
       grid-row-gap: 60px;
